src/app/pages/edit/edit.component.less
@import '../../../../src/colors.less';
@import '../../../common.less';
@import '../../../../src/shadows.less';
@import '../../../../src/typography.less';

.transition-move {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.box-shadow {
  box-shadow: @box-shadow;
}

nz-content {
  background: @background-light;
  padding: @spacing24;
  height: @height-full;
}

nz-sider {
  background: @background-light;
}

.sider-menu {
  height: @height-full;
  border-right: 0;
}

.inner-layout {
  background-color: @background-white;
  padding-left: 0rem;

  > nz-content {
    display: flex;
    justify-content: center;
  }
}

.form-container {
  max-width: @max-width-full;
  display: inline-block;
  vertical-align: top;
  position: static;
  width: @width-full;
  margin-bottom: 50px;
}

.p-3 {
  padding: @spacing48;
}

.mt-1 {
  margin-top: @spacing16;
}

.element-list {
  border: @border-default;
  background: @background-white;
  border-radius: 4px;
  overflow: hidden;
  display: block;
}

.element-box {
  color: @secondary-text;
  padding-bottom: @spacing32;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  cursor: move;
  background: @background-white;
}

.cdk-drag-preview {
  box-sizing: border-box;
  border-radius: 4px;
  .box-shadow;
}

.cdk-drag-placeholder {
  opacity: 0;
}

.cdk-drag-animating {
  .transition-move;
}

.element-list.cdk-drop-list-dragging .element-box:not(.cdk-drag-placeholder) {
  padding: @spacing0;
  .transition-move;
}

.sider-sticky {
  height: fit-content;
  position: sticky;
  top: 64px;
  padding-top: @spacing20;
}

.section-card {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: @spacing12;
  padding: @spacing0;
  width: 900px;
}

.section-title {
  border-bottom: @border-default;
  padding-bottom: @spacing20;
}

.section-id {
  color: @accent-danger;
}

.section-buttons {
  border-bottom: @border-default;
  padding-bottom: @spacing12;
}

.button-spacing {
  margin-left: @spacing12;
}

.input-holder {
  margin: @spacing8;
  padding: @spacing0;
}

.standalone-input-holder {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: @spacing12;
  padding: @spacing0;
  width: 900px;
  border: @border-default;
}

.right-sider {
  background: @background-white;
  position: sticky;
  top: 64px;
  height: calc(100vh - 112px);
  border: solid 1px @border-light;

  h3 {
    padding: @spacing12;
    margin: @spacing0;
    font-size: @font-size-small;
    font-weight: 500;
  }

  .components-list {
    height: calc(100% - @spacing48);
    overflow-y: auto;
    padding: @spacing8;
  }

  .component-item {
    display: flex;
    align-items: center;
    padding: @spacing8;
    margin-bottom: @spacing4;
    background: @background-light;
    border: 1px solid @border-light;
    border-radius: 5px;
    cursor: move;
    position: relative;

    &.section-item {
      flex-direction: column;
      align-items: stretch;
    }

    .hover-icon {
      display: none;
      position: absolute;
      right: 10px;
      top: 50%;
      transform: translateY(-50%);
      cursor: pointer;
      color: @accent-info;
      transition: all 0.3s;

      &:hover {
        color: @accent-info;
      }
    }

    &:hover {
      .hover-icon {
        display: block;
      }
    }

    &.cdk-drag-preview {
      .hover-icon {
        display: none !important;
      }
    }
  }
}

.component-item.cdk-drag-preview {
  background: @background-light !important;
  border: 1px solid @border-light;
  border-radius: 5px;
  padding: 10px;
  display: flex;
  align-items: center;
  .box-shadow;
}

